# bs_image

edge_dection/: .gitignore  CMakeLists.txt
edge_dection/test/: canny_test.cpp  laplace_test.cpp  prewitt_test.cpp  roberts_test.cpp  sobel_test.cpp
feature_descriptor/: CMakeLists.txt
feature_descriptor/include/feature_descriptor/: harris.h
feature_descriptor/src/: harris.cpp
feature_descriptor/test/: fast_test.cpp  harris_test.cpp  orb_test.cpp
image_analysis/: CMakeLists.txt  README.md
image_analysis/script/: enhance_gray_image.py
image_analysis/src/: brightness.cpp  enhance_gray_image.cpp  gradient.cpp  judge_image_blurriness.cpp  remap_color.cpp  sharpen_gray_image.cpp
